Fixed correct display of animals with most popular genotypes.